--- a/src/views/login.html
+++ b/src/views/login.html
@@ -8,9 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/styles.css">
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Mercado Liebre - Registro</title>
@@ -20,7 +22,7 @@
 
     <header>
         <section id="main-header-top-bar">
-           
+
             <div id="headerFlex">
                 <section id="seccionLogo">
                     <a href="/"><img id="logo" src="/images/logo-mercado-liebre.svg" alt=""></a>
@@ -31,54 +33,56 @@
                 </section>
                 <p><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédito</p>
             </div>
-            
+
         </section>
         <nav>
             <div id="navFlex">
-                <ul type = "none" class="BarrasNavFlexIzq">
+                <ul type="none" class="BarrasNavFlexIzq">
                     <li><a href="#">Ofertas</a></li>
                     <li><a href="#">Tiendas Oficiales</a></li>
                     <li><a href="#">Vender</a></li>
                     <li><a href="#">Ayuda</a></li>
                 </ul>
-                
-                <ul type = "none" class="BarrasNavFlexDer">
+
+                <ul type="none" class="BarrasNavFlexDer">
                     <li><a href="/registro">Creá tu cuenta<i class="fa-regular fa-id-card"></i></a></li>
                     <li><a href="/login">Ingresá</a><i class="fa-sharp fa-solid fa-right-to-bracket"></i></li>
                     <li><a href="#">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
-                </ul> 
+                </ul>
             </div>
         </nav>
 
         <div id="seccionHamburguesa">
             <a href="#" id="hamburguesa">
                 <i class="fas fa-bars"></i>
-            </a>    
+            </a>
         </div>
-        
+
 
     </header>
 
     <main>
 
-        <form action="#" method="post" id="formularioRegistro">
-           
+        <form action="/" method="post" id="formularioRegistro">
+
             <div>
-                <input class="barraInput" type="text" name="usuario" placeholder="Nombre de usuario" required minlength="2">
-            </div>
-            
-            <div>
-                <input class="barraInput" type="password" name="password" placeholder="Contraseña" required minlength="8">
+                <input class="barraInput" type="text" name="usuario" placeholder="Nombre de usuario" required
+                    minlength="2">
             </div>
 
             <div>
-                <button type="submit" class="botonEnviarLogin" >Enviar</button>
+                <input class="barraInput" type="password" name="password" placeholder="Contraseña" required
+                    minlength="8">
+            </div>
+
+            <div>
+                <button type="submit" class="botonEnviarLogin">Enviar</button>
             </div>
 
         </form>
 
     </main>
-    
+
     <footer>
 
         <section>
@@ -102,10 +106,11 @@
                 porque estás siempre protegid@.</p>
         </section>
 
-        
+
         <h4 id="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
-        
+
 
     </footer>
 </body>
+
 </html>
